cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/aut_inv.run.err
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/aut_inv.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  ---------------------------
  (1/1) An invariant is used.
  ---------------------------
   * In automaton "p":
     - plant invariant i;
             ^
